--- a/src/index.css
+++ b/src/index.css
@@ -3,38 +3,48 @@
 :root {
     --font-size-root: 62.5%;
 
-    --background-base: #fff;
-    --background-inverse: #333;
+    /* Colors */
+    --color-darkest-rgb: 0, 0, 0;
+    --color-darkest: #000;
+    --color-dark: #333;
+    --color-muted: #666;
+    --color-light: #eee;
+    --color-lightest: #fff;
+    --color-lightest-rgb: 255, 255, 255;
 
-    --color-base: #333;
-    --color-inverse: #fff;
-
-    --font-family-base: 'Roboto Mono', monospace;
-    --font-size-base: 1.5rem;
-    --font-weight-base: 400;
+    /* Typography */
+    --font-family-basic: 'Roboto Mono', monospace;
+    --font-size-basic: 1.5rem;
+    --font-weight-basic: 400;
     --font-weight-title: 600;
 
-    --line-height-base: 1.4;
+    --line-height-basic: 1.4;
     --line-height-title: 1.2;
 
-    --border-color-base: #eee;
+    /* Durations */
+    --transition-duration-basic: .1s;
 
-    --transition-duration-base: .1s;
-
-    --indent-base: 1.6rem;
-    --cell-padding: calc(var(--indent-base) / 2);
+    /* Sizes */
+    --indent-basic: 1.6rem;
 
     --year-height: 3.6rem;
     --genre-width: var(--year-height);
 
     --bar-height: 4.8rem;
+
+    /* Cells */
+    --cell-padding: calc(var(--indent-basic) / 2);
+    --cell-background-color: #fafafa;
+
+    /* Games */
+    --game-release-unknown-background-color: #f5f5f5;
 }
 
 :focus:not(:focus-visible) {
     outline: 0;
 }
 :focus-visible {
-    outline: 2px solid #00f;
+    outline: 2px solid blue;
 }
 
 *,
@@ -51,18 +61,18 @@ body {
 }
 
 html {
-    font-size: var(--font-size-root);
+    font-size: var(--font-size-root, 62.5%);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-    background-color: var(--background-base);
-    color: var(--color-base);
-    font-family: var(--font-family-base);
-    font-weight: var(--font-weight-base);
-    font-size: var(--font-size-base);
-    line-height: var(--line-height-base);
+    background-color: var(--color-lightest);
+    color: var(--color-dark);
+    font-family: var(--font-family-basic, monospace);
+    font-weight: var(--font-weight-basic);
+    font-size: var(--font-size-basic);
+    line-height: var(--line-height-basic);
 }
 
 h1,
@@ -75,8 +85,8 @@ h1 {
 }
 
 a {
-    color: var(--color-base);
-    transition: all var(--transition-duration-base);
+    color: blue;
+    transition: all var(--transition-duration-basic, 0s);
 }
 a:hover {
     text-decoration: none;
