--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,16 @@
     /* Colors */
     --color-darkest-rgb: 0, 0, 0;
     --color-darkest: #000;
-    --color-dark: #333;
-    --color-muted: #999;
-    --color-light: #eee;
+    --color-dark: #666;
+    --color-light: #ddd;
     --color-lightest: #fff;
     --color-lightest-rgb: 255, 255, 255;
 
-    /* Links */
-    --color-link-basic: blue;
-    --color-link-muted: #ccc;
+    --color-border-dark: #1f1f1f;
+    --color-border-light: #f1f1f1;
+
+    --color-link-dark: blue;
+    --color-link-light: cyan;
 
     /* Typography */
     --font-family-basic: 'Roboto Mono', monospace;
@@ -32,19 +33,18 @@
     --indent-basic: 1.6rem;
 
     --year-height: 3.6rem;
-
     --genre-width: var(--year-height);
 
     --bar-height: 4.8rem;
 
     /* Cells */
     --cell-padding: calc(var(--indent-basic) / 2);
-    --cell-background-color-basic: #fafafa;
-    --cell-background-color-inverse: #0a0a0a;
+    --cell-background-color-dark: #0a0a0a;
+    --cell-background-color-light: #fafafa;
 
     /* Games */
-    --game-release-unknown-background-color-basic: #f5f5f5;
-    --game-release-unknown-background-color-inverse: #0e0e0e;
+    --game-release-unknown-background-color-dark: #0e0e0e;
+    --game-release-unknown-background-color-light: #f5f5f5;
 }
 
 *,
@@ -60,7 +60,7 @@ html:not(.js-focus-visible) :focus:not(:focus-visible) {
 }
 html:not(.js-focus-visible) :focus-visible,
 html.js-focus-visible :focus {
-    outline: 2px solid var(--color-link-basic);
+    outline: 2px solid var(--color-link-dark);
 }
 
 html,
@@ -94,8 +94,8 @@ h1 {
 }
 
 a {
-    color: var(--color-link-basic);
-    transition: all var(--transition-duration-basic, 0s);
+    color: var(--color-link-dark);
+    transition: all var(--transition-duration-basic);
 }
 
 a:hover,
