--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
     --color-lightest: #fff;
     --color-lightest-rgb: 255, 255, 255;
 
+    --color-title-dark: #333;
+    --color-title-light: #eee;
+
     --color-border-dark: #1f1f1f;
     --color-border-light: #f1f1f1;
 
@@ -44,7 +47,7 @@
 
     /* Games */
     --game-release-unknown-background-color-dark: #0e0e0e;
-    --game-release-unknown-background-color-light: #f5f5f5;
+    --game-release-unknown-background-color-light: #efefef;
 }
 
 *,
