--- a/src/index.css
+++ b/src/index.css
@@ -111,9 +111,19 @@ h1 {
     margin: 0;
 }
 
+h6 {
+    font-size: var(--font-size-basic);
+    line-height: var(--line-height-basic);
+}
+
 /* Lists */
 ol,
 ul {
     padding: 0;
     list-style: none;
+}
+
+/* Small */
+small {
+    font-size: 1rem;
 }
